[package]
name = "kernel-sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_server"
path = "src/my-server/lib.rs"

[[bin]]
name = "my-server"
path = "src/my-server/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
