[package]
name = "repo_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
ctrlc = "3.4"
config = "0.14"

[dev-dependencies]
tempfile = "3.10"
